apps/prod2/cache/goproxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goproxy
spec:
  parentRefs:
    - kind: Gateway
      name: internal-gateway
      namespace: infra
  hostnames:
    - goproxy.pingcap.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: goproxy
          port: 80
